<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51b46d"
    android:padding="30dp"
    tools:context="danielvargascom.formulacuadratica.CuadracticFormulaActivity">

    <TextView
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/letra_a"
        android:textColor="#80ffffff"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/letra_b"
        android:textColor="#80ffffff"
        android:textSize="20sp"
        android:layout_below="@+id/letraA"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/letra_c"
        android:textColor="#80ffffff"
        android:textSize="20sp"
        android:layout_below="@+id/letraB"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/camposIncompletos"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:layout_above="@+id/calcularButton"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/calcularButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/botonCalcular"
        android:textColor="#51b46d"/>

    <EditText
        android:id="@+id/letraA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@+id/a"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/letraB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@+id/b"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/letraC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/resultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camposIncompletos"
        android:textSize="17sp"
        android:layout_above="@+id/resultado"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
